--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/styles.css">
     <script src="https://kit.fontawesome.com/9e3c5bdd95.js"></script>
+    <base href="https://erick767.github.io/Portafolio/">
 
 </head>
 
